# archlinux-discord

./: .cache.json  .gitignore  README.md  pyproject.toml
archlinux_discord/: config.py  discord.py  main.py  package.py  repo.py
pkgbuilds/: PKGBUILD.stable
